--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starrybackground",
+  "name": "planetarium-react-2025-march",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,18 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/helper-module-imports": "^7.25.9",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.14",
+    "babel-plugin-macros": "^3.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.3.0",
-    "tailwindcss": "^4.0.14"
+    "tailwindcss": "^4.0.14",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/three": "^0.174.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
