--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.14",
     "babel-plugin-macros": "^3.1.0",
+    "firebase": "^11.4.0",
+    "history": "^5.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.3.0",
     "tailwindcss": "^4.0.14",
-    "three": "^0.174.0"
+    "three": "^0.174.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
