--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.0.14",
     "babel-plugin-macros": "^3.1.0",
     "firebase": "^11.4.0",
+    "formik": "^2.4.6",
     "history": "^5.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
