--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@react-three/drei": "^10.0.5",
+    "@react-three/fiber": "^9.1.1",
     "@tailwindcss/vite": "^4.0.14",
+    "antd": "^5.24.5",
     "babel-plugin-macros": "^3.1.0",
     "firebase": "^11.4.0",
     "formik": "^2.4.6",
+    "gsap": "^3.12.7",
     "history": "^5.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
