--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.3.0",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.14",
     "three": "^0.174.0",
